# mcp-django-unfold

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/mcp_django_unfold/: __init__.py  docs.py  server.py
