[project]
name = "mcp-django-unfold"
version = "0.1.0"
description = "MCP server providing comprehensive Django Unfold documentation for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Danang Hari Setiawan"},
]
keywords = ["mcp", "django", "unfold", "admin", "documentation", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/danangharissetiawan/mcp-django-unfold"
Repository = "https://github.com/danangharissetiawan/mcp-django-unfold"
Issues = "https://github.com/danangharissetiawan/mcp-django-unfold/issues"

[project.scripts]
mcp-django-unfold = "mcp_django_unfold.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_django_unfold"]
